     * added underpinnings of a unlockable, optional, bonus scenario
 * multiplayer maps:
   * new multiplayer maps: The Manzivan Traps
 * units:
   * balancing changes:
     * decreased cost of the Mudcrawler from 9 to 5
 * user interface
   * disable inactive sliders instead of hiding them
   * sliders can be adjusted with keyboard left and right
 * WML engine
   * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
     show up in the multiplayer game creation interface (FR #6397)
   * new [set_specials] tag to allow custom special in effect tags
   * new remove_specials=<id_list> key to allow to remove specials in effect tags
   * obsolete set_special= in [effect] tags
   * correct handling of UTF8 filenames under windows
 * multiplayer game management
   * client now tells the server if it ended in vectory or defeat 

Version 1.1.7:
 * campaigns
   * Heir to the Throne
     * added 2 mermen to Bay of Pearls on hard
     * lowered turn limits on Scepter of Fire to something sane
 * language and i18n:
    * updated translations: French, German, Portuguese (Brazil), Spanish,
      Swedish
 * multiplayer maps:
    * revised multiplayer maps: Amohsad Caldera
 * units
    * balancing changes:
      * removed White Mage and Mage of Light from random_leader
      * removed special defense values from the Merman Hoplite
      * decreased the melee attack of the Merman Javelineer from 8-3 to 8-2
      * increased the melee attack of the Merman Entangler from 7-3 to 8-3
      * increased the ranged attack of the Merman Entangler from 7-3 to 8-3
      * increased the melee attack of the Necrophage from 6-3 to 7-3
      * decreased the XP requirement of the Necrophage from 66 to 40
 * music & sound
   * new or improved sounds: lich hit & die, bite, tail
 * graphics
   * new village flag animation
   * some units and animations updated for team color support
 * fixed bug that caused the game to freeze when a leader takes part in a
   fight

Version 1.1.6: