@@ -11,6 +11,7 @@ Version 1.3-svn:
  * user interface
    * disable inactive sliders instead of hiding them
    * sliders can be adjusted with keyboard left and right
+   * sidebar reports related to gold, units, villages, and time grey out during other team's turns
  * WML engine
    * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
      show up in the multiplayer game creation interface (FR #6397)
